# svault-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
svault_api/: app.py  models.py  s3_client.py
