[tool.poetry]
name = "svault-api"
version = "0.1.0"
description = ""
authors = ["Zach Fuller <zach.fuller1222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["standard"], version = "^2.4.5"}
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.9"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
