[tool.poetry]
name = "svault-api"
version = "0.1.0"
description = ""
authors = ["Zach Fuller <zach.fuller1222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["brotli", "sqlalchemy", "standard"], version = "^2.4.5"}
pydantic = "^2.5.3"
tzdata = "^2023.4"
aioboto3 = "^12.1.0"
aiosqlite = "^0.19.0"
picologging = "^0.9.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.9"
pre-commit = "^3.6.0"
mypy-boto3 = "^1.34.11"
boto3-stubs = {extras = ["s3"], version = "^1.34.11"}
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "C90", "I", "N", "ASYNC", "S", "B", "A", "DTZ", "RET", "PTH", "PERF", "LOG", "RUF"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

strict_equality = true
strict_concatenate = true
check_untyped_defs = true

disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_any_generics = true

disallow_untyped_calls = true

no_implicit_reexport = true
warn_return_any = true
